fixed alignment bug and started mobile CSS

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body{
   display: flex;
 }
 
+#menu-mobile{
+  display: none;
+}
+
 .links{
   color: rgb(248, 243, 243);
   text-decoration: none;
@@ -823,6 +827,188 @@ button {
   #product-checkout, #checkout-labels{
     width: 55vw;
   } 
+}
+
+@media only screen and (max-width: 600px){
+ #navbar{
+  width: 100%; 
+  display: flex;
+  padding: 1em 1em 1.5em 1em;  
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  position: fixed;
+  top: 0;
+ }
+
+ #footer{
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 4em;
+ }
+
+#site-name h1{
+  font-size: 1.5em;
+  margin: 0.3;
+  margin-left: .5em;
+}
+
+#site-name img{
+  width: 2em;
+}
+
+#menu{
+  display: none;
+}
+
+#menu-mobile{
+  display: flex;
+}
+
+#menu-mobile p{
+  margin: 0em 1em 0em 1em;
+}
+
+.links{
+  color: rgb(248, 243, 243);
+  text-decoration: none;
+}
+
+.links:hover{
+  text-decoration: underline;
+}
+
+#menu p{
+  margin: .5em .5em 0em .5em;
+  font-size: 1.2em;
+}
+
+#dk-rights{
+  display: none;
+}
+
+#homepage{
+  display: flex;
+  flex-direction: column;
+}
+
+#intro{
+  background: rgb(248, 243, 243);
+  width: 100%;
+  height: 22em;
+  display: flex;
+  flex-direction: column;
+
+  color: #384267;
+  font-size: 2em;
+  letter-spacing: 2px;
+  /* border: green solid 10px; */
+}
+
+#intro-text{
+  /* border: red solid 1px; */
+  width: 10em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+#intro-text h1{
+  font-size: 1em;
+  margin-bottom: .5em;
+  text-align: center;
+  
+}
+
+#intro-text p{
+  font-size: .7em;
+  text-align: center;
+}
+
+#hp-img{
+  height: 8em;
+  width: 13em;
+  /* border: red solid 1px; */
+  padding: .5em;
+}
+
+#hp-img img {
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+
+#potw-div{
+  display: flex;
+  flex-direction: column;
+  background: rgb(213, 216, 245);
+  color: #384267;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 6em;
+}
+
+#potw-div h1{
+  font-size: 2em;
+  margin-bottom: .2em;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+#underline{
+  border-bottom: #384267 5px solid;
+  width: 8em;
+  margin-bottom: 2em;
+}
+
+#potw-menu{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border-radius: 20px;
+  
+}
+
+.potw-card{
+  margin: 1em .2em 1em .2em;
+  /* border: red solid 2px; */
+  height: 12em;
+  width: 12em;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 2px;
+}
+
+#potw-img{
+  width: 9em;
+  height: 9em;
+  object-fit: contain;
+  justify-self: center;
+  align-self: center;
+  box-shadow: 6px 2px 4px 4px rgb(152, 157, 203);
+  border-radius: 10px;
+  padding: 1em;
+  background-color: white;
+}
+
+#title-link{
+  text-decoration: none;
+  color: #384267;
+  cursor: pointer;
+  font-size: .9em;
+}
+
+#potw-img:hover{
+  filter: brightness(80%);
+  transition: ease-in 200ms;
+}
+
+#potw-card h4{
+  display: none;
+}
+
 }
 
 
